--- a/old/package.json
+++ b/old/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "node index.js"
   },
+  "dependencies": {
+    "express": "~4.9.x"
+  },
   "engines": {
     "node": "0.10.x"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/heroku/node-js-getting-started"
   },
   "keywords": [
     "node",
