--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "node-js-getting-started",
+  "name": "jinc",
   "version": "0.1.2",
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "dependencies": {
+    "httpS": "*"
+  },
+  "private": true,
   "engines": {
     "node": "0.10.x"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/heroku/node-js-getting-started"
   },
   "keywords": [
     "node",
